fix appearing scrollbar issue

--- a/app/styles/table-fluid/styles.less
+++ b/app/styles/table-fluid/styles.less
@@ -1,4 +1,9 @@
 .__table-fluid {
+  > div {
+    position: relative !important;
+    overflow: auto !important;
+  }
+
   .__table-fluid-row {
     .content-block();
     .grid-display(div, @table-fluid-border-color);
@@ -8,6 +13,7 @@
 
     > div {
       height: @table-fluid-row-column-height;
+      position: relative !important;
     }
 
     &:hover {
